--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "pdfjs-dist": "^2.14.305"
+    "pdfjs-dist": "^2.14.305",
+    "pdfkit": "^0.15.1"
   }
 }
